# magpie

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  asd.txt
kys/: translate_vulkan.cpp  translate_vulkan.h
res/discarded/: vertex_instanced.vert
res/models/: backpack.mtl
res/shaders/: compileAll.bat  compileAll.sh
res/shaders/compiled/: bloom_downsample_ps.spv  bloom_upsample_ps.spv  brdf_integrator_ps.spv  equirectangular_to_cubemap_ps.spv  fullscreen_quad_vs.spv  fullscreen_triangle_vs.spv  hdr_tonemapping_cs.spv  hdr_tonemapping_ps.spv  irradiance_convolution_ps.spv  model_shadow_map_vs.spv  model_vs.spv  prefilter_convolution_ps.spv  primitive_quad_vs.spv  primitive_vs.spv  shadow_map_ps.spv  skybox_ps.spv  skybox_vs.spv  subsurface_refraction_ps.spv  texture_uv_ps.spv  texturedPBR_ps.spv  whitePBR_ps.spv
res/shaders/compute/: hdr_tonemapping_cs.hlsl  particles.glsl  particles.hlsl  particles.spv
res/shaders/raster/: bloom_downsample.spv  bloom_upsample.hlsl  bloom_upsample.spv  brdf_integrator.hlsl  brdf_integrator.spv  common_fxc.hlsl  common_fxc.inc  common_ps.hlsl  compileAll.bat  compileAll.sh  compileAll_hlsl.sh  equirectangular_to_cubemap.hlsl  equirectangular_to_cubemap.spv  fragment.glsl  fragment.spv  fragment_skybox.frag  fragment_skybox.glsl  fragment_skybox.spv  fragment_texture.glsl  fragment_texture.spv  generic_vertex.spv  generic_vertex.vert  hdr_tonemapping.hlsl  hdr_tonemapping.spv  irradiance_convolution.hlsl  irradiance_convolution.spv  model_vs.hlsl  model_vs.spv  post_process_ps.hlsl  post_process_ps.spv  post_process_vs.hlsl  post_process_vs.spv  prefilter_convolution.hlsl  prefilter_convolution.spv  primitive_quad_vs.hlsl  primitive_quad_vs.spv  primitive_vs.hlsl  primitive_vs.spv  skybox.hlsl  skybox.spv  (+8 more)
res/shaders/src/: bindless.hlsl  bloom_downsample_ps.hlsl  bloom_upsample_ps.hlsl  brdf_integrator_fs.slang  brdf_integrator_ps.hlsl  common.hlsl  common_fxc.hlsl  common_fxc.inc  deferred_lighting_ambient_fs.slang  deferred_lighting_point_light.slang  deferred_lighting_point_light_fs.slang  equirectangular_to_cubemap_fs.slang  equirectangular_to_cubemap_ps.hlsl  fullscreen_quad_vs.hlsl  fullscreen_triangle_vs.slang  hdr_tonemapping_cs.slang  hdr_tonemapping_ps.hlsl  irradiance_convolution_fs.slang  irradiance_convolution_ps.hlsl  model_common.hlsl  model_common.inc  model_shadow_map_vs.hlsl  model_shadow_map_vs.slang  model_vs.hlsl  model_vs.slang  prefilter_convolution_fs.slang  prefilter_convolution_ps.hlsl  primitive_vs.hlsl  primitive_vs.slang  shadow_map_fs.slang  shadow_map_ps.hlsl  skybox.slang  skybox_ps.hlsl  skybox_vs.hlsl  subsurface_refraction_ps.hlsl  texture_uv_fs.slang  texture_uv_ps.hlsl  texturedPBR_fs.slang  texturedPBR_gbuffer_fs.slang  texturedPBR_ps.hlsl  (+2 more)
res/textures/standard/: todo.txt
src/: app.cpp  app.h  camera.cpp  camera.h  common.cpp  common.h  entity.cpp  entity.h  gpu_particles.cpp  gpu_particles.h  main.cpp  platform.cpp  platform.h  render_object.h  renderer.cpp  renderer.h  system_backend.cpp  system_backend.h
src/container/: array.h  bitset.h  circular_queue.h  deque.h  function.h  hash_map.h  linked_list.h  optional.h  pair.h  string.h  vector.h
src/core/: app.cpp  app.h  camera.cpp  camera.h  common.cpp  common.h  config.h  cvar.cpp  cvar.h  debug_ui.cpp  debug_ui.h  editor_ui.cpp  editor_ui.h  platform.cpp  platform.h  profiler.cpp  profiler.h
src/graphics/: backbuffer.cpp  backbuffer.h  backend.cpp  backend.h  bitmap.cpp  bitmap.h  blend.h  buffer.cpp  buffer.h  buffer_mgr.cpp  buffer_mgr.h  colour.cpp  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  compute_pipeline.cpp  compute_pipeline.h  constants.h  descriptor.cpp  descriptor.h  descriptor_allocator.cpp  descriptor_allocator.h  descriptor_builder.cpp  descriptor_builder.h  descriptor_cache.cpp  descriptor_cache.h  descriptor_layout_cache.cpp  descriptor_layout_cache.h  descriptor_pool_mgr.cpp  descriptor_pool_mgr.h  generic_render_target.cpp  generic_render_target.h  gpu_buffer.cpp  gpu_buffer.h  gpu_buffer_mgr.cpp  gpu_buffer_mgr.h  graphics_core.cpp  graphics_core.h  graphics_pipeline.cpp  (+69 more)
src/input/: gamepad.h  input.cpp  input.h  keyboard.h  mouse.h  v_key.cpp  v_key.h
src/io/: endian.cpp  endian.h  file_stream.cpp  file_stream.h  memory_stream.cpp  memory_stream.h  stream.cpp  stream.h
src/math/: calc.h  colour.cpp  colour.h  rect.h  timer.cpp  timer.h  transform.cpp  transform.h
src/platform/: platform_core.cpp  platform_core.h
src/rendering/: bindless.cpp  bindless.h  bindless_resource_mgr.cpp  bindless_resource_mgr.h  camera.cpp  camera.h  gpu_buffer_mgr.cpp  gpu_buffer_mgr.h  gpu_particles.cpp  gpu_particles.h  light.cpp  light.h  material.cpp  material.h  material_system.cpp  material_system.h  mesh.cpp  mesh.h  mesh_loader.cpp  mesh_loader.h  model.cpp  model.h  model_loader.cpp  model_loader.h  render_object.cpp  render_object.h  render_op.h  render_pass.h  render_target_mgr.cpp  render_target_mgr.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader_buffer_mgr.cpp  shader_buffer_mgr.h  shader_manager.cpp  shader_manager.h  shader_mgr.cpp  shader_mgr.h  (+11 more)
src/rendering/passes/: deferred_pass.cpp  deferred_pass.h  forward_pass.cpp  forward_pass.h  post_process_pass.cpp  post_process_pass.h  render_pass.h  shadow_pass.cpp  shadow_pass.h
src/rendering/renderers/: deferred_renderer.cpp  deferred_renderer.h
src/vulkan/: backbuffer.cpp  backbuffer.h  backend.cpp  backend.h  bindless.cpp  bindless.h  bitmap.cpp  bitmap.h  blend.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  core.cpp  core.h  descriptor.cpp  descriptor.h  descriptor_allocator.cpp  descriptor_allocator.h  descriptor_builder.cpp  descriptor_builder.h  descriptor_layout_cache.cpp  descriptor_layout_cache.h  device.h  generic_render_target.cpp  generic_render_target.h  gpu_buffer.cpp  gpu_buffer.h  image.cpp  image.h  image_view.cpp  image_view.h  pipeline.cpp  pipeline.h  pipeline_cache.cpp  pipeline_cache.h  pipeline_definition.cpp  pipeline_definition.h  queue.cpp  queue.h  (+32 more)
(+6 files in other folders)
